Added a sceond paragraph to the main article

--- a/index.html
+++ b/index.html
@@ -87,19 +87,55 @@
                 </div>
             </header>
             <main>
-                <div class="story-body">
-                    <aside>
-                            <h2 class="">Sign up for Science Times</h2>
-                            <p class="">We’ll bring you stories that capture the wonders of the human body, nature and the cosmos.</p>
-                            <button class="aside-button">Sign up</button>
+                <div class="paragraph-wrapper">
+                    <aside class="sign-up">
+                        <h2>Sign up for Science Times</h2>
+                        <p>We’ll bring you stories that capture the wonders of the human body, nature and the cosmos.</p>
+                        <button class="sign-up-button">Sign up</button>
                     </aside>
-                    <div>
-                        <p class="">CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.</p>
-                        <p class="">He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.</p>
-                        <p class="">If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.</p>
-                        <p class="">“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.</p>
+                    <div class="main-text">
+                        <p>CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.</p>
+                        <p>He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.</p>
+                        <p>If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.</p>
+                        <p>“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.</p>
                     </div>
-                    
+                </div>
+                <div class="paragraph-wrapper">
+                    <aside class="editors-picks">
+                        <h2>Editors’ Picks</h2>
+                        <article>
+                            <a href="javascript:void(0);">
+                                <img alt="A person scuba diving" src="https://static01.nyt.com/images/2019/12/03/science/00SCI-FANTASTICGRANMAS1/00SCI-FANTASTICGRANMAS1-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350" itemprop="url" itemid="https://static01.nyt.com/images/2019/12/03/science/00SCI-FANTASTICGRANMAS1/00SCI-FANTASTICGRANMAS1-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">
+                                <h3>Studying Sea Snakes? Time to Call the ‘Fantastic Grandmothers’</h3>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="javascript:void(0);">
+                                <img alt="Woman reading a book" src="https://static01.nyt.com/images/2019/10/24/books/00RussoStoryTimesIntro/00RussoStoryTimesIntro-square640-v3.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350" itemprop="url" itemid="https://static01.nyt.com/images/2019/10/24/books/00RussoStoryTimesIntro/00RussoStoryTimesIntro-square640-v3.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">
+                                <h3>Welcome to Story Times</h3>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="javascript:void(0);">
+                                    <img alt="Teenage boy sitting behind a computer" src="https://static01.nyt.com/images/2019/12/19/fashion/19ROWAN-PROMO/19ROWAN-PROMO-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350" itemprop="url" itemid="https://static01.nyt.com/images/2019/12/19/fashion/19ROWAN-PROMO/19ROWAN-PROMO-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">
+                                    <h3>Here’s What’s Happening in the American Teenage Bedroom</h3>
+                            </a>
+                        </article>
+                        <div class="editor">
+                            <a href="javascript:void(0);">
+                                <img src="https://tpc.googlesyndication.com/pagead/imgad?id=CICAgKDnv-f1VxABGAEyCMn5nyeoDnFB">
+                                <h3>PAID POST: AUDEMARS PIGUET</h3>
+                                <h3>Three Artists Reimagine the Nature of Time in Tokyo</h3>
+                            </a>
+                        </div>
+                    </aside>
+                    <div class="main-text">
+                        <p>On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they had seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.</p>
+                        <p>Reaching back across 13.8 billion years to <a href="javascript:void(0);">the first sliver of cosmic time</a> with telescopes at the South Pole, a team of astronomers led by John M. Kovac of the Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of space-time — so-called <a href="javascript:void(0);">gravitational waves</a> — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.</p>
+                        <p>Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.</p>
+                        <p>If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and energy to science and speculation.</p>
+                        <p>Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.</p>
+                    </div>
                 </div>
             </main>
         </div>
