fixed html validator error

--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@
                     <img alt="Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago."
                         class="css-11cwn6f"
                         src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale"
-                        srcset="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=90&amp;auto=webp 600w,https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-jumbo.jpg?quality=90&amp;auto=webp 1024w,https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&amp;auto=webp 2048w"
-                        sizes="((min-width: 600px) and (max-width: 1004px)) 84vw, (min-width: 1005px) 80vw, 100vw"
-                        itemprop="url"
-                        itemid="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale"
-                        style="cursor: pointer;">
+                        >
                     <figcaption>
                         <span>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which
                             explains how the universe expanded so uniformly and so quickly in the instant after the Big
@@ -142,34 +138,26 @@
                         <article>
                             <a href="javascript:void(0);">
                                 <img alt="A person scuba diving"
-                                    src="https://static01.nyt.com/images/2019/12/03/science/00SCI-FANTASTICGRANMAS1/00SCI-FANTASTICGRANMAS1-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350"
-                                    itemprop="url"
-                                    itemid="https://static01.nyt.com/images/2019/12/03/science/00SCI-FANTASTICGRANMAS1/00SCI-FANTASTICGRANMAS1-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">
+                                    src="https://static01.nyt.com/images/2019/12/03/science/00SCI-FANTASTICGRANMAS1/00SCI-FANTASTICGRANMAS1-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">
                                 <h3>Studying Sea Snakes? Time to Call the ‘Fantastic Grandmothers’</h3>
                             </a>
                         </article>
                         <article>
                             <a href="javascript:void(0);">
                                 <img alt="Woman reading a book"
-                                    src="https://static01.nyt.com/images/2019/10/24/books/00RussoStoryTimesIntro/00RussoStoryTimesIntro-square640-v3.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350"
-                                    itemprop="url"
-                                    itemid="https://static01.nyt.com/images/2019/10/24/books/00RussoStoryTimesIntro/00RussoStoryTimesIntro-square640-v3.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">
-                                <h3>Welcome to Story Times</h3>
+                                    src="https://static01.nyt.com/images/2019/10/24/books/00RussoStoryTimesIntro/00RussoStoryTimesIntro-square640-v3.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">                                <h3>Welcome to Story Times</h3>
                             </a>
                         </article>
                         <article>
                             <a href="javascript:void(0);">
                                 <img alt="Teenage boy sitting behind a computer"
-                                    src="https://static01.nyt.com/images/2019/12/19/fashion/19ROWAN-PROMO/19ROWAN-PROMO-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350"
-                                    itemprop="url"
-                                    itemid="https://static01.nyt.com/images/2019/12/19/fashion/19ROWAN-PROMO/19ROWAN-PROMO-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">
-                                <h3>Here’s What’s Happening in the American Teenage Bedroom</h3>
+                                    src="https://static01.nyt.com/images/2019/12/19/fashion/19ROWAN-PROMO/19ROWAN-PROMO-square640-v2.jpg?quality=75&amp;auto=webp&amp;disable=upscale&amp;width=350">                                <h3>Here’s What’s Happening in the American Teenage Bedroom</h3>
                             </a>
                         </article>
                         <div class="editor">
                             <a href="javascript:void(0);">
                                 <img
-                                    src="https://tpc.googlesyndication.com/pagead/imgad?id=CICAgKDnv-f1VxABGAEyCMn5nyeoDnFB">
+                                    src="https://tpc.googlesyndication.com/pagead/imgad?id=CICAgKDnv-f1VxABGAEyCMn5nyeoDnFB" alt="whaterver">
                                 <h3>PAID POST: AUDEMARS PIGUET</h3>
                                 <h3>Three Artists Reimagine the Nature of Time in Tokyo</h3>
                             </a>
@@ -310,7 +298,7 @@
                 <figure class="video-modul">
                     <iframe title="YouTube Video" src="https://www.youtube.com/embed/ZlfIVEy_YOA"
                         allowfullscreen=""></iframe>
-                    <figcaption itemprop="caption description" class="">
+                    <figcaption class="">
                         <span class="part-one">Stanford Professor Andrei Linde celebrates physics breakthrough</span>
                         <span class="part-two">Video by<br>Stanford University</span>
                     </figcaption>
@@ -367,12 +355,8 @@
                 </div>
                 <figure class="telescope-image-modul">
                     <img alt="The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns &amp;mdash; the signature of a universe being wrenched violently apart at its birth."
-                        src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale"
-                        srcset="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg?quality=90&amp;auto=webp 600w,https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-jumbo.jpg?quality=90&amp;auto=webp 1024w,https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-superJumbo.jpg?quality=90&amp;auto=webp 2048w"
-                        sizes="((min-width: 600px) and (max-width: 1004px)) 84vw, (min-width: 1005px) 60vw, 100vw"
-                        itemprop="url"
-                        itemid="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale">
-                    <figcaption><span>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling
+                        src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale">
+                                            <figcaption><span>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling
                             gravity patterns — the signature of a universe being wrenched violently apart at its
                             birth.</span><span>Steffen Richter/Associated Press</span>
                     </figcaption>
@@ -391,7 +375,7 @@
                         </p>
                         <p>Detecting those spirals required measuring infinitesimally small differences in the
                             temperature of the microwaves. The group’s telescope, Bicep2, is basically a giant
-                            superconducting thermometer.</>
+                            superconducting thermometer.
                         <p>
                             “We had no expectations what we would see,” Dr. Kovac said.
                         </p>
@@ -524,7 +508,7 @@
                                 </figure>
                                 <h3>NASA Finds India’s Vikram Moon Lander Crash Site, With Amateur’s Help</h3>
                             </a>
-                            <time>6h ago</time>
+                            <span>6h ago</span>
                         </article>
                         <article class="article-2">
                             <a href="Javascript:void(0);">
@@ -535,7 +519,7 @@
                                 </figure>
                                 <h3>In Praise of Lumpy Gravy From the Cosmic Kitchen</h3>
                             </a>
-                            <time>Nov. 26</time>
+                            <span>Nov 26</span>
                         </article>
                         <article class="article-3">
                             <a href="Javascript:void(0);">
@@ -546,7 +530,7 @@
                                 </figure>
                                 <h3>A Dance That Stops 2 of Neptune’s Moons From Colliding</h3>
                             </a>
-                            <time>Nov. 21</time>
+                            <span>Nov 21</span>
                         </article>
                         <div class="clear"></div>
                         <article class="article-4">
@@ -558,7 +542,7 @@
                                 </figure>
                                 <h3>Oxygen on Mars Adds to Atmospheric Mysteries</h3>
                             </a>
-                            <time>Nov. 20</time>
+                            <span>Nov 20</span>
                         </article>
                         <article class="article-5">
                             <a href="Javascript:void(0);">
@@ -569,7 +553,7 @@
                                 </figure>
                                 <h3>A Black Hole Threw a Star Out of the Milky Way Galaxy</h3>
                             </a>
-                            <time>Nov. 14</time>
+                            <span>Nov 26</span>
                         </article>
                         <article class="article-6">
                             <a href="Javascript:void(0);">
@@ -580,7 +564,7 @@
                                 </figure>
                                 <h3>Does Who You Are at 7 Determine Who You Are at 63?</h3>
                             </a>
-                            <time>Nov. 27</time>
+                            <span>Nov 27</span>
                         </article>
                     </div>
                     <div class="clear"></div>
@@ -595,7 +579,7 @@
                                 </figure>
                                 <h3>N.F.L. Week 13: What We Learned</h3>
                             </a>
-                            <time>Dec. 2</time>
+                            <span>Nov 27</span>
                         </article>
                         <article class="article-2">
                             <a href="Javascript:void(0);">
@@ -606,7 +590,7 @@
                                 </figure>
                                 <h3>In Praise of Lumpy Gravy From the Cosmic Kitchen</h3>
                             </a>
-                            <time>Nov. 26</time>
+                            <span>Nov 26</span>
                         </article>
                         <article class="article-3">
                             <a href="Javascript:void(0);">
@@ -617,7 +601,7 @@
                                 </figure>
                                 <h3>‘I Think This Guy Is, Like, Passed Out in His Tesla’</h3>
                             </a>
-                            <time>Nov. 27</time>
+                            <span>Nov 26</span>
                         </article>
                     </div>
                 </div>
