Added readme file

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                 </h1>
                 <figure>
                     <img alt="Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago."
-                        class="css-11cwn6f"
-                        src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale"
-                        >
+                        class="main-picture"
+                        src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&auto=webp">
                     <figcaption>
                         <span>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which
                             explains how the universe expanded so uniformly and so quickly in the instant after the Big
@@ -355,8 +354,8 @@
                 </div>
                 <figure class="telescope-image-modul">
                     <img alt="The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns &amp;mdash; the signature of a universe being wrenched violently apart at its birth."
-                        src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg?quality=75&amp;auto=webp&amp;disable=upscale">
-                                            <figcaption><span>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling
+                        src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-jumbo.jpg?quality=90&auto=webp">
+                    <figcaption><span>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling
                             gravity patterns — the signature of a universe being wrenched violently apart at its
                             birth.</span><span>Steffen Richter/Associated Press</span>
                     </figcaption>
@@ -508,7 +507,7 @@
                                 </figure>
                                 <h3>NASA Finds India’s Vikram Moon Lander Crash Site, With Amateur’s Help</h3>
                             </a>
-                            <span>6h ago</span>
+                            <span class="time">6h ago</span>
                         </article>
                         <article class="article-2">
                             <a href="Javascript:void(0);">
@@ -519,7 +518,7 @@
                                 </figure>
                                 <h3>In Praise of Lumpy Gravy From the Cosmic Kitchen</h3>
                             </a>
-                            <span>Nov 26</span>
+                            <span class="time">Nov 26</span>
                         </article>
                         <article class="article-3">
                             <a href="Javascript:void(0);">
@@ -530,7 +529,7 @@
                                 </figure>
                                 <h3>A Dance That Stops 2 of Neptune’s Moons From Colliding</h3>
                             </a>
-                            <span>Nov 21</span>
+                            <span class="time">Nov 21</span>
                         </article>
                         <div class="clear"></div>
                         <article class="article-4">
@@ -542,7 +541,7 @@
                                 </figure>
                                 <h3>Oxygen on Mars Adds to Atmospheric Mysteries</h3>
                             </a>
-                            <span>Nov 20</span>
+                            <span class="time">Nov 20</span>
                         </article>
                         <article class="article-5">
                             <a href="Javascript:void(0);">
@@ -553,7 +552,7 @@
                                 </figure>
                                 <h3>A Black Hole Threw a Star Out of the Milky Way Galaxy</h3>
                             </a>
-                            <span>Nov 26</span>
+                            <span class="time">Nov 26</span>
                         </article>
                         <article class="article-6">
                             <a href="Javascript:void(0);">
@@ -564,7 +563,7 @@
                                 </figure>
                                 <h3>Does Who You Are at 7 Determine Who You Are at 63?</h3>
                             </a>
-                            <span>Nov 27</span>
+                            <span class="time">Nov 27</span>
                         </article>
                     </div>
                     <div class="clear"></div>
@@ -579,7 +578,7 @@
                                 </figure>
                                 <h3>N.F.L. Week 13: What We Learned</h3>
                             </a>
-                            <span>Nov 27</span>
+                            <span class="time">Nov 27</span>
                         </article>
                         <article class="article-2">
                             <a href="Javascript:void(0);">
@@ -590,7 +589,7 @@
                                 </figure>
                                 <h3>In Praise of Lumpy Gravy From the Cosmic Kitchen</h3>
                             </a>
-                            <span>Nov 26</span>
+                            <span class="time">Nov 26</span>
                         </article>
                         <article class="article-3">
                             <a href="Javascript:void(0);">
@@ -601,7 +600,7 @@
                                 </figure>
                                 <h3>‘I Think This Guy Is, Like, Passed Out in His Tesla’</h3>
                             </a>
-                            <span>Nov 26</span>
+                            <span class="time">Nov 26</span>
                         </article>
                     </div>
                 </div>
